# ow3d_benchmark

./: .gitignore  Explanation_SettingsFile.rtf  Explanation_SettingsFile.txt  MinerU_markdown_1-s2.0-S0029801816303936-main_2036549529506979840.md  Read_Kinamatics.m  compare_ow3d_mf12_subharmonic_amplitude_budget.m  compare_ow3d_mf12_surface_elevation.m  compare_ow3d_mf12_surface_velocity_potential.m  compare_ow3d_mf12_u20_from_phi_chain.m  compare_ow3d_mf12_u20_phi_routes.m  compare_ow3d_mf12_u20_raw.m  compare_ow3d_mf12_u20_surface_tracking.m  compare_ow3d_mf12_w20_sigma_scan.m  compare_ow3d_mf12_w20_vertical_profile.m  diagnose_ow3d_phit.m  extract_eta33_from_OW3D.m  make_directional_harmonic_evolution_video.m  mf12_directional_generator.m  mf12_unidirectional_generator.m  postprocess_ow3d_boundkinematics.m  postprocess_ow3d_boundwaves.m  quick_extract_ow3d_subharmonic_velocity.m  readme  run.sh  test_kinematics_phase_sanity.m  uni_generator.m  validate_fourphase_from_phase0_components.m
cpp/: CMakeLists.txt  README.md  run_generator.bat  run_generator.ps1  run_generator.sh
cpp/build_fftw_omp16/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cpp/build_fftw_omp16/Testing/Temporary/: CTestCostData.txt
cpp/build_fftw_test/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cpp/build_omp16/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cpp/configs/: directional_combined_smoke_40.json  directional_default.json  directional_local_max600.json  directional_local_max600_fourphase.json  directional_smoke.json  directional_smoke_fourphase_test.json
cpp/include/mf12_cpp/: case_io.hpp  compare.hpp  spectral.hpp
cpp/include/ow3d_directional/: config.hpp  four_phase.hpp  mf12_runner.hpp  ow3d_export.hpp  spectrum.hpp  verification.hpp  visualization.hpp
cpp/src/: config.cpp  four_phase.cpp  main.cpp  mf12_case_io.cpp  mf12_compare.cpp  mf12_runner.cpp  mf12_spectral.cpp  ow3d_export.cpp  spectrum.cpp  verification.cpp  visualization.cpp
cpp/tests/: test_main.cpp
directional initial condition/: readme
directional initial condition/cpp_combined_smoke_40/: readme
directional initial condition/cpp_large_spreading/: readme
directional initial condition/cpp_local_max600_fourphase/: readme
directional initial condition/cpp_smoke/: readme
directional initial condition/error_wave_separation/: readme
irregularWavesMF12/: ReadMe.m
irregularWavesMF12/Source/: jonswap.m  kinematicsMF12.m  mf12_direct_coefficients.m  mf12_direct_surface.m  mf12_second_subharmonic_kinematics.m  mf12_spectral_coefficients.m  mf12_spectral_kinematics.m  (+6 more)
linear_eta_to_nonlinear_timeseries_package/: PACKAGE_AUDIT.md  README.md  SELF_CONTAINED_STATUS.md  run_demo_from_sample.m  run_from_user_eta_timeseries.m  startup_package.m
notes/: MinerU_markdown_Madsen_and_Fuhrman_-_2012_-_Third-order_theory_for_multi-directional_irregular_2034742722689961984.md  TODO_surface_kinematics.md  monochromatic_surface_horizontal_velocity_derivation.md  monochromatic_surface_phit_from_bulk_explicit.md  monochromatic_surface_pressure_explicit.md  monochromatic_surface_pressure_from_bulk_explicit.md  ow3d_chain_correction_explanation.md  surface_kinematics_workflow_summary.md  surface_pressure_free_surface_derivation.md  surface_velocity_from_surface_potential_note.md  third_order_surface_u_reredivation.md
test functions for VWA Opensource/: diagnose_mf12_first_order_error.m  diagnose_mf12_subharmonic_metrics.m  test_dalzell_clean_compare_script.m  test_mf12_second_subharmonic_method.m  test_script.m  test_surface_velocity_script.m  vwa_analytic_x.m  vwa_apply_phase_operator.m  vwa_compute.m  vwa_compute_surface_quantity.m  vwa_kxgrid.m  vwa_mu.m
uni initial condition/: readme
(+191 files in other folders)
